<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <!-- First Name -->

        <EditText
            android:id="@+id/fname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#808080"
            android:hint="@string/hint_fname"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no" />

        <!-- Last Name -->

        <EditText
            android:id="@+id/lname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#808080"
            android:hint="@string/hint_lname"
            android:inputType="textCapWords"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no" />

        <!-- Email -->

        <EditText
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#808080"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no" />

        <!-- Password -->

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#808080"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no" />

        <!-- Confirm Password -->

        <EditText
            android:id="@+id/confirm_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="#808080"
            android:hint="@string/hint_confirm_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:importantForAutofill="no" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnReg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:backgroundTint="@color/teal_700"
            android:text="@string/btn_reg"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btnLinkLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:backgroundTint="@color/purple_700"
            android:text="@string/link_login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>